--- a/public/index.html
+++ b/public/index.html
@@ -15,3 +15,16 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+<style>
+    body{
+        width: 100%;
+        height: 100vh;
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+    }
+    #app{
+        min-height: 100%;
+        width: 100%;
+    }
+</style>
